Renamed the CurrentUserModel to UserModel. This model has functions for getting data for a user, and should be extended for later use. Only userId is saved in the cookie now. Updated some links and wrote some commnets. Added a few functions in MySqlConnect.

--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -125,8 +125,8 @@
     <Compile Include="Models\Event\Room.cs" />
     <Compile Include="Models\Account\AccountModels.cs" />
     <Compile Include="Models\Account\LoginModel.cs" />
-    <Compile Include="Models\User\CurrentUserModel.cs" />
     <Compile Include="Models\User\GroupModel.cs" />
+    <Compile Include="Models\User\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
