--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -121,9 +121,9 @@
     <Compile Include="Models\Calendar\CalendarMonth.cs" />
     <Compile Include="Models\Calendar\EventViewModel.cs" />
     <Compile Include="Models\Event\BasicEvent.cs" />
-    <Compile Include="Models\Event\EventType.cs" />
+    <Compile Include="Models\EventType\EventTypeModel.cs" />
     <Compile Include="Models\Event\EventWithDetails.cs" />
-    <Compile Include="Models\Event\FieldData.cs" />
+    <Compile Include="Models\EventType\FieldDataModel.cs" />
     <Compile Include="Models\Event\Room.cs" />
     <Compile Include="Models\Account\LoginModel.cs" />
     <Compile Include="Models\User\GroupModel.cs" />
@@ -166,6 +166,8 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Calendar\Index.cshtml" />
     <Content Include="Views\Calendar\List.cshtml" />
+    <Content Include="Views\EventType\CreateEventType.cshtml" />
+    <Content Include="Views\EventType\EditEventType.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
