Made a working create/edit event page. Can only load event types now, not save them. A link is added in home/index to the page for testing. Not check of user is implemented yet...

--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -169,6 +169,7 @@
     <Content Include="Views\Calendar\Index.cshtml" />
     <Content Include="Views\Calendar\List.cshtml" />
     <Content Include="Views\EventType\EditEventType.cshtml" />
+    <Content Include="Views\EventType\FieldDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
