--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -123,7 +123,7 @@
     <Compile Include="Models\Calendar\EventViewModel.cs" />
     <Compile Include="Models\Event\BasicEvent.cs" />
     <Compile Include="Models\EventType\EventTypeModel.cs" />
-    <Compile Include="Models\Event\EventCreateModel.cs" />
+    <Compile Include="Models\Event\EventEditModel.cs" />
     <Compile Include="Models\Event\EventWithDetails.cs" />
     <Compile Include="Models\EventType\FieldDataModel.cs" />
     <Compile Include="Models\Event\FieldModel.cs" />
@@ -175,7 +175,7 @@
     <Content Include="Views\Maintenance\FieldDetails.cshtml" />
     <Content Include="Views\Shared\_MenuPartial.cshtml" />
     <Content Include="Views\Maintenance\Index.cshtml" />
-    <Content Include="Views\Event\CreateEvent.cshtml" />
+    <Content Include="Views\Event\EditEvent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
