Added a htmlhelper for creating select lists (two lists (selected and available), and arrows for adding/removeing). Rooms may now be added to events. Bug: typespecefics are not written to db...

--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -116,6 +116,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\DateTimeEditor.cs" />
+    <Compile Include="Helpers\ListEditor.cs" />
     <Compile Include="Models\Account\Register.cs" />
     <Compile Include="Models\Calendar\Calendar.cs" />
     <Compile Include="Models\Calendar\CalendarDay.cs" />
