--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -116,7 +116,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\DateTimeEditor.cs" />
-    <Compile Include="Helpers\ListEditor.cs" />
+    <Compile Include="Helpers\FieldEditor.cs" />
+    <Compile Include="Helpers\DoubleListEditor.cs" />
     <Compile Include="Models\Account\Register.cs" />
     <Compile Include="Models\Calendar\Calendar.cs" />
     <Compile Include="Models\Calendar\CalendarDay.cs" />
