The Javascript Update:   - Moved some js-functions to tools-script.js, which is included in _Layout.cshtml   - Included date-picker-editor in _Layout.cshtml   - Added some comments and 'cleaned' the code.   - Added char-counters to type specefic fields.   - Visibility list is now disabled when global visibility is selected. Bug fix:   - Fixed the AM-PM time format bug in event creation.

--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -168,6 +168,7 @@
     <Content Include="Scripts\MicrosoftMvcValidation.js" />
     <Content Include="Scripts\modernizr-1.7.js" />
     <Content Include="Scripts\modernizr-1.7.min.js" />
+    <Content Include="Scripts\tools-script.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
