--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Models\Account\LoginModel.cs" />
     <Compile Include="Models\Maintenance\MaintenanceModel.cs" />
     <Compile Include="Models\Group\GroupModel.cs" />
+    <Compile Include="Models\Maintenance\ManageUserModel.cs" />
     <Compile Include="Models\User\UserModel.cs" />
     <Compile Include="Models\User\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -186,6 +187,7 @@
     <Content Include="Views\Event\EditEvent.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Maintenance\EditGroup.cshtml" />
+    <Content Include="Views\Maintenance\ManageUsers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
