Changed the Event View so that the day is shiftet by X hours, where X is a number specified by admin. Added Models/Maintenance/Config file where X is specified - currently hardcoded to 6.

--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Models\Event\FieldModel.cs" />
     <Compile Include="Models\Event\Room.cs" />
     <Compile Include="Models\Account\LoginModel.cs" />
+    <Compile Include="Models\Maintenance\Config.cs" />
     <Compile Include="Models\Maintenance\MaintenanceModel.cs" />
     <Compile Include="Models\Group\GroupModel.cs" />
     <Compile Include="Models\Maintenance\ManageUserModel.cs" />
