Several changes:  - Changed EditEvent so that it uses AJAX (added a partial view, EventSpecificList.cshtml)  - Added null-values in User, Group and Event Type drop downs.  - Added visuals for user lists and group lists. Need a change of the DB to implement further though.

--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -192,6 +192,7 @@
     <Content Include="Views\Maintenance\EditGroup.cshtml" />
     <Content Include="Views\Maintenance\ManageUsers.cshtml" />
     <Content Include="Views\Account\EditUser.cshtml" />
+    <Content Include="Views\Event\EventSpecificList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
