--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -111,9 +111,12 @@
     <Compile Include="Controllers\MaintenanceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\MySqlConnect.cs" />
-    <Compile Include="Controllers\CustomQuery.cs" />
+    <Compile Include="Database\MySqlConnect.cs" />
+    <Compile Include="Database\CustomQuery.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Database\MySqlEvent.cs" />
+    <Compile Include="Database\MySqlGroup.cs" />
+    <Compile Include="Database\MySqlUser.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
