--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -155,6 +155,7 @@
     <None Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\create-eventtype.js" />
     <Content Include="Scripts\date-picker-validator.js" />
+    <Content Include="Scripts\edit-event.js" />
     <Content Include="Scripts\edit-user.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
