--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Database\MySqlEvent.cs" />
     <Compile Include="Database\MySqlGroup.cs" />
+    <Compile Include="Database\MySqlRoom.cs" />
     <Compile Include="Database\MySqlUser.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
