--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -227,6 +227,7 @@
     <Content Include="Views\Maintenance\ManageUsers.cshtml" />
     <Content Include="Views\Account\EditUser.cshtml" />
     <Content Include="Views\Event\EventSpecificList.cshtml" />
+    <Content Include="Views\Maintenance\EditRoom.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
