--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Models\Event\FieldModel.cs" />
     <Compile Include="Models\Event\Room.cs" />
     <Compile Include="Models\Account\LoginModel.cs" />
+    <Compile Include="Models\Group\GroupViewModel.cs" />
     <Compile Include="Models\Maintenance\Config.cs" />
     <Compile Include="Models\Maintenance\MaintenanceModel.cs" />
     <Compile Include="Models\Group\GroupModel.cs" />
@@ -228,6 +229,8 @@
     <Content Include="Views\Account\EditUser.cshtml" />
     <Content Include="Views\Event\EventSpecificList.cshtml" />
     <Content Include="Views\Maintenance\EditRoom.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\GroupView\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
