made recaptcha work in registration (finally)
may need installation of two packages:
- reCAPTCHA plugin for .net
- reCaptchaMvcExtensions

can be found with NuGet package manager

--- a/CalendarApplication/CalendarApplication/Web.config
+++ b/CalendarApplication/CalendarApplication/Web.config
@@ -10,6 +10,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="RecaptchaPrivateKey" value="6Len2-ESAAAAAPp_-hP7cuBsM6FecP-eiGMogvQ5" />
+    <add key="RecaptchaPublicKey" value="6Len2-ESAAAAAIwsvR3KDJeGqVWXX-BXw-Scb5iX" />
   </appSettings>
   <system.web>
     <httpRuntime targetFramework="4.5" />
@@ -22,6 +24,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="Recaptcha" />
       </namespaces>
     </pages>
     <authentication mode="Forms" />
@@ -37,4 +40,12 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
