--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -145,7 +145,9 @@
     <Compile Include="Models\Event\FieldModel.cs" />
     <Compile Include="Models\Event\Room.cs" />
     <Compile Include="Models\Account\LoginModel.cs" />
+    <Compile Include="Models\Group\GroupPrivilegesModel.cs" />
     <Compile Include="Models\Group\GroupViewModel.cs" />
+    <Compile Include="Models\Group\GroupListModel.cs" />
     <Compile Include="Models\Maintenance\Config.cs" />
     <Compile Include="Models\Maintenance\MaintenanceModel.cs" />
     <Compile Include="Models\Group\GroupModel.cs" />
@@ -246,6 +248,8 @@
     <Content Include="Views\Maintenance\EditRoom.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\GroupView\Index.cshtml" />
+    <Content Include="Views\GroupView\ViewGroup.cshtml" />
+    <Content Include="Views\GroupView\SetPrivileges.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
