Added a new html helper, ListView - constructs a scrollable list. See the comments for syntax. Added above helper to the user page. Started work on the group view page.

--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ListView.cs" />
     <Compile Include="Helpers\DateTimeEditor.cs" />
     <Compile Include="Helpers\FieldEditor.cs" />
     <Compile Include="Helpers\DoubleListEditor.cs" />
