fixed a few things in database scripts (removing tables etc)
some small changes in web config to allow full error messages

disabled print event function

--- a/CalendarApplication/CalendarApplication/Web.config
+++ b/CalendarApplication/CalendarApplication/Web.config
@@ -10,13 +10,14 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="RecaptchaPrivateKey" value="6Len2-ESAAAAAPp_-hP7cuBsM6FecP-eiGMogvQ5" />
-    <add key="RecaptchaPublicKey" value="6Len2-ESAAAAAIwsvR3KDJeGqVWXX-BXw-Scb5iX" />
+    <add key="RecaptchaPrivateKey" value="6LcBquMSAAAAAH5SFcoJM3Cy65FJStIlsARc5b11" />
+    <add key="RecaptchaPublicKey" value="6LcBquMSAAAAAAs8-4D3lEP6C0tY7H87rKcvoWEe" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
-    <pages>
+    <pages>  
       <namespaces>
         <add namespace="System.Web.Helpers" />
         <add namespace="System.Web.Mvc" />
@@ -45,6 +46,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="1.0.0.0-6.6.5.0" newVersion="6.6.5.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
