Fixed the 'Remember me' bug. When 'Remember me' is checked, the user is remembered for 600000 minutes (~ 13 months). Made the calendar month view wider.

--- a/CalendarApplication/CalendarApplication/Web.config
+++ b/CalendarApplication/CalendarApplication/Web.config
@@ -28,7 +28,9 @@
         <add namespace="Recaptcha" />
       </namespaces>
     </pages>
-    <authentication mode="Forms" />
+    <authentication mode="Forms">
+      <forms timeout="600000"/>
+    </authentication>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
