--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Models\Account\LoginModel.cs" />
     <Compile Include="Models\Event\RoomListModel.cs" />
     <Compile Include="Models\Event\StringListModel.cs" />
+    <Compile Include="Models\Group\ApplicantListModel.cs" />
     <Compile Include="Models\Group\GroupPrivilegesModel.cs" />
     <Compile Include="Models\Group\GroupViewModel.cs" />
     <Compile Include="Models\Group\GroupListModel.cs" />
@@ -271,6 +272,7 @@
     <Content Include="Views\List\UserList.cshtml" />
     <Content Include="Views\List\RoomList.cshtml" />
     <Content Include="Views\Event\StringListPartial.cshtml" />
+    <Content Include="Views\Group\ViewApplicants.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
