--- a/CalendarApplication/CalendarApplication/CalendarApplication.csproj
+++ b/CalendarApplication/CalendarApplication/CalendarApplication.csproj
@@ -277,7 +277,7 @@
     <Content Include="Views\Group\ViewApplicants.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\Files\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
