--- a/CalendarApplication/CalendarApplication/Web.config
+++ b/CalendarApplication/CalendarApplication/Web.config
@@ -12,12 +12,18 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="RecaptchaPrivateKey" value="6LcBquMSAAAAAH5SFcoJM3Cy65FJStIlsARc5b11" />
     <add key="RecaptchaPublicKey" value="6LcBquMSAAAAAAs8-4D3lEP6C0tY7H87rKcvoWEe" />
-    <add key="CalendarApplication:Version" value="v0.2.5" />
+    <add key="CalendarApplication:Version" value="v0.3.0" />
     <add key="CalendarApplication:StartingHourOfDay" value="6" />
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5"
+                 maxRequestLength="10000"
+                 executionTimeout="600"
+                 minFreeThreads="8" 
+                 minLocalRequestFreeThreads="4" 
+                 appRequestQueueLimit="100"
+                  /> <!-- Max length of file uploads and such: 100MB. Execution time out in 10 minutes. -->
     <compilation debug="true" targetFramework="4.5" />
     <pages>  
       <namespaces>
